// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BrandLogo > renders dark custom branding logo 1`] = `
<DocumentFragment>
  <img
    alt="Logo"
    class=""
    src="l"
  />
</DocumentFragment>
`;

exports[`BrandLogo > renders dark custom branding symbol 1`] = `
<DocumentFragment>
  <img
    alt="Logo"
    class="brandLogoSpin"
    src="s"
  />
</DocumentFragment>
`;

exports[`BrandLogo > renders dark sourcegraph logo 1`] = `
<DocumentFragment>
  <img
    alt="Sourcegraph logo"
    class=""
    src="/assets/img/sourcegraph-logo-dark.svg"
  />
</DocumentFragment>
`;

exports[`BrandLogo > renders dark sourcegraph symbol 1`] = `
<DocumentFragment>
  <img
    alt="Sourcegraph logo"
    class="brandLogoSpin"
    src="/assets/img/sourcegraph-mark.svg?v2"
  />
</DocumentFragment>
`;

exports[`BrandLogo > renders light custom branding logo 1`] = `
<DocumentFragment>
  <img
    alt="Logo"
    class=""
    src="l"
  />
</DocumentFragment>
`;

exports[`BrandLogo > renders light custom branding symbol 1`] = `
<DocumentFragment>
  <img
    alt="Logo"
    class="brandLogoSpin"
    src="s"
  />
</DocumentFragment>
`;

exports[`BrandLogo > renders light sourcegraph logo 1`] = `
<DocumentFragment>
  <img
    alt="Sourcegraph logo"
    class=""
    src="/assets/img/sourcegraph-logo-light.svg"
  />
</DocumentFragment>
`;

exports[`BrandLogo > renders light sourcegraph symbol 1`] = `
<DocumentFragment>
  <img
    alt="Sourcegraph logo"
    class="brandLogoSpin"
    src="/assets/img/sourcegraph-mark.svg?v2"
  />
</DocumentFragment>
`;
